--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
+        "nesbot/carbon": "2.0.0-beta.2 as 1.25.0"
+    },
+    "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
